docker file folder error

--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -23,13 +23,10 @@ COPY . .
 
 RUN chmod +x scripts/entrypoint.sh
 
-RUN mkdir -p staticfiles media logs
+RUN mkdir -p /staticfiles /media /logs
 
 RUN useradd -m -u 1000 appuser && \
     chown -R appuser:appuser /app
-
-RUN chown -R appuser:appuser /app/logs && \
-    chown -R 755 /app/logs
 
 USER appuser
 
